# wealthy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  build.rs  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example-env.txt  package-lock.json  package.json  tailwind.config.js
initdb/: setup_database.sql
src/: main.rs
src/components/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/routes/: mod.rs
src/state/: mod.rs
src/static/css/: style.css
src/utils/: layout.rs  mod.rs
static/css/: style.css
