[package]
name = "wealthy"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
correctness = "deny"
unwrap_used = { level = "forbid", priority = 1 }
enum_glob_use = { level = "deny", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
dbg_macro = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
single_match = { level = "allow", priority = 127 }
single_match_else = { level = "allow", priority = 127 }
option-if-let-else = { level = "allow", priority = 127 }
unused_async = { level = "warn", priority = 127 }
no_effect_underscore_binding = { level = "allow", priority = 127 }

[dependencies]
axum = { version = "0.7.9", features = ["tracing"] }
axum-embed = "0.1.0"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
maud = { version = "0.26.0", features = ["axum"] }
rust-embed = { version = "8.5.0", features = ["axum"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
tap = "1.0.1"
tokio = { version = "1.42.0", features = ["full", "net"] }
toml = "0.8.19"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
